tests/snapshots/lib__snapshots__simple@parse_spec_invalid_crate_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error=warn,crate2=debug/a.c"
---
crate2=debug,/a.c

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=error=warn,crate2=debug/a.c
   ·              ──────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

