tests/snapshots/lib__snapshots__simple@parse_spec_string_level.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=wrong,crate2=warn"
---
crate2=warn,

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=wrong,crate2=warn
   ·              ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

