tests/snapshots/lib__snapshots__simple@parse_spec_valid_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error,crate1::mod2,crate2=debug/abc"
---
crate1::mod2=trace,crate1::mod1=error,crate2=debug,/abc
(no warnings)
