tests/snapshots/lib__snapshots__simple@regex-extents.env_filter.snap
---
source: tests/snapshots.rs
expression: "[{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]"
---


4 directives were ignored as invalid

  ⚠ invalid level filter specified
   ╭────
 1 │ [{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]
   ·     ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

  ⚠ invalid level filter specified
   ╭────
 1 │ [{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]
   ·               ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

  ⚠ invalid level filter specified
   ╭────
 1 │ [{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]
   ·                         ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

  ⚠ invalid level filter specified
   ╭────
 1 │ [{a=b=c}],[{a=b=*}],[{a=*=c}],[{*=b=c}]
   ·                                   ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE


