tests/snapshots/lib__snapshots__simple@regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "error,hello=warn/[0-9]"
---
hello=warn,error,/[0-9]
(no warnings)
