tests/snapshots/lib__snapshots__simple@target.env_filter.snap
---
source: tests/snapshots.rs
expression: "example::log::target=level"
---


1 directives were ignored as invalid

  ⚠ invalid level filter specified
   ╭────
 1 │ example::log::target=level
   ·                      ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE


