tests/snapshots/lib__snapshots__simple_filter@big-regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "/(?:){4294967295}"
---
Filter {
    directives: ReverseSortedVec {
        vec: [],
    },
    regex: None,
}
