tests/snapshots/lib__snapshots__simple_filter@invalid-filter.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 70
expression: "crate::target=warn/[0-9]/"
---
(compilation failed)
