tests/snapshots/lib__snapshots__simple_filter@invalid-regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "crate::target=warn/[[]"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate::target",
                ),
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
