tests/snapshots/lib__snapshots__simple_filter@invalid-target.env_filter.snap
---
source: tests/snapshots.rs
expression: crate=target=warn
---
Filter {
    directives: ReverseSortedVec {
        vec: [],
    },
    regex: None,
}
